# gtoolkit-ui-scripter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: continuous-integration-workflow.yaml
input-simulator/libenigo/: Cargo.toml
input-simulator/libenigo/src/: lib.rs  mouse.rs
libenigo/src/: mouse_button.rs
src/BaselineOfGToolkitEnigo/: BaselineOfGToolkitEnigo.class.st  package.st
src/GToolkit-Enigo/: GtEnigo.class.st  GtEnigoExternalEnumeration.class.st  GtEnigoExternalEnumerationExamples.class.st  GtEnigoLibrary.class.st  GtEnigoMouseButton.class.st  GtEnigoMouseButtonExamples.class.st  package.st
