[package]
name = "libenigo"
version = "0.1.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2018"

[dependencies]
enigo = "0.0.13"
libc = "0.2.65"
boxer = { git = "https://github.com/feenkcom/gtoolkit-boxer" }

[lib]
name = "Enigo"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3